<resources>
    <string name="app_name">GymLog</string>
    <string name="exercise">Exercise</string>
    <string name="enter_an_exercise">Enter an Exercise</string>
    <string name="weight">Weight</string>
    <string name="enter_a_weight">Enter a Weight</string>
    <string name="enter_reps">Enter Reps</string>
    <string name="reps">Reps</string>
    <string name="log">Log!</string>
    <string name="nothing_to_show_go_gym">Nothing to show, go gym</string>
    <string name="login_welcome">Welcome to the GymLog. \nPlease Sign in.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="hello_gym_goers">Hello Gym Goers!</string>
    <string name="preference_file_key">examplePreferenceFileNameGymLog</string>
    <string name="preference_userId_key">daclinkGymLogPreferenceUserIdKey</string>
</resources>